feat(api): refactored ListModuleVersions RPC to support wildcards for modules and/or versions
